--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,7 @@
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li class="selected"><a href="index.html">About</a></li>
           <li><a href="research.html">Research</a></li>
-          <li><a href="night_sky.html">Publications</a></li>
+          <li><a href="publications.html">Publications</a></li>
           <li><a href="courses.html">Courses</a></li>
          
         </ul>
