--- a/courses.html
+++ b/courses.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="https://code.jquery.com/jquery.js"></script>
     <script> 
     $(function(){
       $("#include_latest").load("latest_news.html"); 
