--- a/publications.html
+++ b/publications.html
@@ -192,8 +192,8 @@
         <li id="cl"> <b>A. Nouri</b>, C. Charrier, O. Lézoray  <br/>
         <font color=#3364FF > Indice d’évaluation avec référence de la qualité des                                maillages 3D basé sur la saillance visuelle</font> <br/>
          CORESA (COmpression et                            REprésentation des Signaux Audiovisuels) <b>2017</b> - Caen France. </br>
-          <button onClick="javascript: window.location='https://hal.archives-ouvertes.fr/hal-01595957'">Bibtex  <i class="fas fa-percent"> </i> </button>
-        <button onClick="javascript: window.location='https://hal.archives-ouvertes.fr/hal-01595957/document'">PDF  <i class="fas fa-file-pdf"> </i> </button>
+          <button onClick="javascript: window.location='https://hal.archives-ouvertes.fr/hal-01713962/'">Bibtex  <i class="fas fa-percent"> </i> </button>
+        <button onClick="javascript: window.location='https://hal.archives-ouvertes.fr/hal-01713962/file/AnassNouri_ChristopheCharrier_OlivierLezoray.pdf'">PDF  <i class="fas fa-file-pdf"> </i> </button>
         <br/> <br/>
 
         <!--  -->
@@ -202,7 +202,7 @@
         SMC'<b>2017</b>: Data Engineering In Bioinformatics, Image and Data Analysis. Tangier - Morocco</br>
 
                   <button onClick="javascript: window.location='https://www.researchgate.net/publication/315754469_Saillance_visuelle_multi-echelle_des_maillages_3D_colores_pour_le_lissage_et_le_debruitage_adaptatif'">Bibtex  <i class="fas fa-percent"> </i> </button>
-        <button onClick="javascript: window.location='https://hal.archives-ouvertes.fr/hal-01595957/document'">PDF  <i class="fas fa-file-pdf"> </i> </button>
+        <button onClick="javascript: window.location='https://www.researchgate.net/publication/315754469_Saillance_visuelle_multi-echelle_des_maillages_3D_colores_pour_le_lissage_et_le_debruitage_adaptatif'">PDF  <i class="fas fa-file-pdf"> </i> </button>
         <br/> <br/>
 
         <!--  -->
