--- a/latest_news.html
+++ b/latest_news.html
@@ -1,8 +1,8 @@
 <h1>Latest News</h1>
 <h4>Deposit of an European Patent</h4>
 <h5>Decembre, 2018</h5>
-<p>Check out our European patent entilted "Method For Locating and Characterizing Bifurcations of A Cerebreal Vascular Tree, Associated Methods and Devices"  <br /></p>
+<p>Check out our European patent entilted "Method For Locating and Characterizing Bifurcations of A Cerebreal Vascular Tree, Associated Methods and Devices"  <br /><a href="#">Read more</a></p>
 
 <h4>Last published paper !</h4>
 <h5>February, 2019</h5>
-<p>Check out our lasted paper entilted "3D bifurcations characterization for intra-cranial aneurysms prediction" published in SPIE Medical Imaging 2019, San Diego CA USA  <br /><a href="https://www.researchgate.net/publication/328342129_3D_bifurcations_characterization_for_intra-cranial_aneurysms_prediction">Read more</a></p> 
+<p>Check out our lasted paper entilted "3D bifurcations characterization for intra-cranial aneurysms prediction" published in SPIE Medical Imaging 2019, San Diego CA USA  <br /><a href="#">Read more</a></p> 
