--- a/publications.html
+++ b/publications.html
@@ -109,6 +109,7 @@
         Signal Processing: Image Communication, Vol. 38, pp. 151-166, <b><b>2015</b></b>. </br>
         <button onClick="javascript: window.location='https://dblp.org/rec/bibtex/journals/spic/NouriCL15'">Bibtex  <i class="fas fa-percent"> </i> </button>
         <button onClick="javascript: window.location='https://hal.archives-ouvertes.fr/hal-01252849/document'">PDF  <i class="fas fa-file-pdf"> </i> </button>
+          <button onClick="javascript: window.location='https://downloads.greyc.fr/3DSaliency/'">Project's page </button>
     
         <br/>
       </ol>
@@ -228,6 +229,18 @@
         <button onClick="javascript: window.location='https://hal.archives-ouvertes.fr/hal-01252880/'">Bibtex  <i class="fas fa-percent"> </i> </button>
         <button onClick="javascript: window.location='https://hal.archives-ouvertes.fr/hal-01252880/document'">PDF  <i class="fas fa-file-pdf"> </i> </button>
          <br/> <br/>
+        </ol>
+
+        <!-- Technical reports -->
+        <h2>Technical reports</h2>
+        <font size="3">
+        <ol>
+        <!--  -->
+        <li id="cl"> <b>A. Nouri, C. Charrier, O. Lézoray</b> <br/>
+        <font color=#3364FF > Greyc 3D Colored Mesh Database</font> <br/>
+        Technical report. <b> 2017. </b> </br>
+        <button onClick="javascript: window.location='https://downloads.greyc.fr/Greyc3DColoredMeshDatabase/'"> Data  <i class="fas fa-percent"> </i> </button>
+          <button onClick="javascript: window.location='https://hal.archives-ouvertes.fr/hal-01441721/file/Technical_report.pdf'">PDF  <i class="fas fa-file-pdf"> </i> </button>
         </ol>
 
         <!-- Seminars -->
