--- a/latest_news.html
+++ b/latest_news.html
@@ -5,4 +5,4 @@
 
 <h4>Last published paper !</h4>
 <h5>February, 2019</h5>
-<p>Check out our lasted paper entilted "3D bifurcations characterization for intra-cranial aneurysms prediction" published in SPIE Medical Imaging 2019, San Diego CA USA  <br /><a href="#">Read more</a></p> 
+<p>Check out our lasted paper entilted "3D bifurcations characterization for intra-cranial aneurysms prediction" published in SPIE Medical Imaging 2019, San Diego CA USA  <br /><a href="https://www.researchgate.net/publication/328342129_3D_bifurcations_characterization_for_intra-cranial_aneurysms_prediction">Read more</a></p> 
