--- a/courses.html
+++ b/courses.html
@@ -37,6 +37,7 @@
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="courses.html">Courses</a></li>
+          <li><a href="database.html">Database</a></li>
          
         </ul>
       </div>
