--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Anass Nouri - Home </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="description" content="website description" />
+  <meta name="description" content="Personnal webpage" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
   <link rel="stylesheet" type="text/css" href="style/style.css" />
