--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li class="selected"><a href="index.html">About</a></li>
+          <li><a href="index.html">About</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="courses.html">Courses</a></li>
