--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   
 
                 Romain Bourcier. Currently, he is an Associate Professor at the ISEN school of Engenieering (Institut Supérieur de l’Electronique et du Numérique) and member of the Vision research team of the L@bIsen. He gives lectures in computer programming, image analysis and machine learning. His current research interests include 2D images, 3D mesh/volume processing, visual saliency, objective quality assessment, medical imaging, machine learning and graph-based signal processing.
-             <button class="button" onClick="javascript: window.location='CV.pdf'">Download CV</button> </p>
+             <button class="button" onClick="javascript: window.location='CV.pdf','_blank'">Download CV</button> </p>
             </font>
            
 
