--- a/publications.html
+++ b/publications.html
@@ -177,7 +177,7 @@
         <!--  -->
         <li id="cl"><b>A. Nouri</b>, C. Charrier, O. Lézoray  <br/>
         <font color=#3364FF > Mesh Saliency with Local Adaptive Patches </font> <br/>
-        PIE Electronics Imaging, Three-Dimensional Image Processing,                                         Measurement, and Applications (3DPIM) <b><b>2015</b></b> - SanFrancisco USA. pp. 93930D-93930D-12. </br>
+        SPIE Electronics Imaging, Three-Dimensional Image Processing,                                         Measurement, and Applications (3DPIM) <b><b>2015</b></b> - SanFrancisco USA. pp. 93930D-93930D-12. </br>
         <button class="button" onClick="javascript: window.open('https://hal.archives-ouvertes.fr/hal-01252849/')">Bibtex  <i class="fas fa-percent"> </i> </button>
         <button class="button" onClick="javascript: window.open('https://hal.archives-ouvertes.fr/hal-01252849/document')">PDF  <i class="fas fa-file-pdf"> </i> </button>
         <br/> <br/>
