--- a/publications.html
+++ b/publications.html
@@ -93,7 +93,7 @@
         <font color=#3364FF > Visual Saliency and PerceptualQuality of 3D meshes</font> <br/>
         Intelligent Multidimensional Data and Image Processing. <b><b>2018</b></b> </br>
         <button class="button" onClick="javascript: window.open('https://hal.archives-ouvertes.fr/hal-01666362v1/bibtex')">Bibtex  <i class="fas fa-percent"> </i> </button>
-        <button class="button" onClick="javascript: window.open('https://www.igi-global.com/chapter/visual-saliency-and-perceptual-quality-assessment-of-3d-meshes/207893')">PDF  <i class="fas fa-file-pdf"> </i> </button>
+        <button class="button" onClick="javascript: window.open('chapitre_livre.pdf')">PDF  <i class="fas fa-file-pdf"> </i> </button>
     
         <br/>
       </ol>
