--- a/research.html
+++ b/research.html
@@ -65,9 +65,9 @@
       <h2>Projects I was envolved in</h2>
       <font size="3">
         <ul>
-          <li>«Monitoring the Evolution Dynamic of Intra-Cranial Aneurysms via Image Processing and Machine Learning tools». <b>2019-.</b></li>
-          <li>«Understanding the Pathophysiology of Intracranial Aneurysm» <b>2017-2018.</b></li>
-          <li>GRAPHSIP, «Graph Signal Processing, applications to 3D points Clouds and neuroscience». <b>2014-2017</b>. </li>
+          <li>«Monitoring the Evolution Dynamic of Intra-Cranial Aneurysms via Image Processing and Machine Learning tools». <b>2019-. - Project NExT, Health and Engineering - Nantes France</b></li>
+          <li>«Understanding the Pathophysiology of Intracranial Aneurysm» <b>2017-2018, - ANR Project.</b></li>
+          <li>GRAPHSIP, «Graph Signal Processing, applications to 3D points Clouds and neuroscience». <b>2014-2017 - ANR Project</b>. </li>
           <li>PEQP 2D, «Perceptual quality assement of 2D images», Action nationale dans le cadre du GDR-ISIS en collaboration avec la CIE (Comission Internationale de l'Eclairage) <b>2013</b>.</li>
         </ul> 
       </font>
@@ -80,11 +80,11 @@
         </ul> 
       </font>
 
-      <h2> Research Interets</h2>
+      <h2> Research Interests</h2>
       <font size="3">
         <ul>
           <li> 3D mesh analysis for computer graphics applications.</li>
-          <li> 3D volume analysis for medical imaging and diagnosis-aid applications</li>
+          <li> 3D volume analysis for medical imaging and diagnosis-aid applications.</li>
           <li> Machine/deep learning for computer vision applications.</li>
           <li> Perceptually-based optimisation for computer vision.</li>
           <li> Graph-based signal processing.</li>
