--- a/research.html
+++ b/research.html
@@ -68,7 +68,7 @@
           <li>«Monitoring the Evolution Dynamic of Intra-Cranial Aneurysms via Image Processing and Machine Learning tools». <b>2019-. - Project NExT, Health and Engineering - Nantes France</b></li>
           <li>«Understanding the Pathophysiology of Intracranial Aneurysm» <b>2017-2018, - ANR Project.</b></li>
           <li>GRAPHSIP, «Graph Signal Processing, applications to 3D points Clouds and neuroscience». <b>2014-2017 - ANR Project</b>. </li>
-          <li>PEQP 2D, «Perceptual quality assement of 2D images», Action nationale dans le cadre du GDR-ISIS en collaboration avec la CIE (Comission Internationale de l'Eclairage) <b>2013</b>.</li>
+          <li>PEQP 2D, «Perceptual quality assement of 2D images», National Project GDR-ISIS/International Commission on Illumination en collaboration avec la CIE (Comission Internationale de l'Eclairage) <b>2013</b>.</li>
         </ul> 
       </font>
 
