--- a/research.html
+++ b/research.html
@@ -65,10 +65,10 @@
       <h2>Projects I was envolved in</h2>
       <font size="3">
         <ul>
-          <li>«Monitoring the Evolution Dynamic of Intra-Cranial Aneurysms via Image Processing and Machine Learning tools». <b>2019-. - Project NExT, Health and Engineering - Nantes France</b></li>
-          <li>«Understanding the Pathophysiology of Intracranial Aneurysm» <b>2017-2018, - ANR Project.</b></li>
-          <li>GRAPHSIP, «Graph Signal Processing, applications to 3D points Clouds and neuroscience». <b>2014-2017 - ANR Project</b>. </li>
-          <li>PEQP 2D, «Perceptual quality assement of 2D images», National Project GDR-ISIS/International Commission on Illumination en collaboration avec la CIE (Comission Internationale de l'Eclairage) <b>2013</b>.</li>
+          <li>«Monitoring the Evolution Dynamic of Intra-Cranial Aneurysms via Image Processing and Machine Learning tools». <b>2019-</b>. (Project with NExT, Health and Engineering - Nantes France)</li>
+          <li>«Understanding the Pathophysiology of Intracranial Aneurysm» <b>2017-2018</b> (ANR Project).</li>
+          <li>GRAPHSIP, «Graph Signal Processing, applications to 3D points Clouds and neuroscience». <b>2014-2017</b> (ANR Project). </li>
+          <li>PEQP 2D, «Perceptual quality assement of 2D images» <b>2013-2014</b> (National Project GDR-ISIS/International Commission on Illumination).</li>
         </ul> 
       </font>
 
