--- a/courses.html
+++ b/courses.html
@@ -84,7 +84,7 @@
         </ul> 
     </font>
 
-      <h2>Lectures I gave in (<a href="https://www.stlo.unicaen.fr/mmi/" target="_blank">the Multimedia and Internet department of the Cherbourg Institute of Technology </a>)(2014-2015) </h2>
+      <h2>Lectures I gave in <a href="https://www.stlo.unicaen.fr/mmi/" target="_blank">the Multimedia and Internet department of the Cherbourg Institute of Technology </a> (2014-2015) </h2>
       <font size="3">
         <ul>
           <li>Procedural/object oriented programming. </li>
