--- a/publications.html
+++ b/publications.html
@@ -211,7 +211,7 @@
 
         <li id="cl"> <b>S. Bougleux</b>, O. Lézoray, A. Nouri <br/>
         <font color=#3364FF >Préservation de la structure des maillages 3D colorés basée sur un P-Laplacien Adaptatif sur graphs dirigés</font> <br/>
-        GRETSI (Groupe d'Etudes du Traitement du Signal et desImages <b>2019</b>.
+        GRETSI (Groupe d'Etudes du Traitement du Signal et desImages <b>2019</b> - Lille - France.  <b>2019, Under Review</b>.</br>
     
 
         <br/> <br/>
