--- a/publications.html
+++ b/publications.html
@@ -105,9 +105,9 @@
         <ol>
 
        <!--  -->
-        <li id="cl"><b>A. Nouri</b>, F. Autrusseau, R. Bourcier, A. Gaignard, V. L'Allinec, C. Menguy, J. Veziers, H. Desal, G. Loirand, R. Redon <br/>
-        <font color=#3364FF > Detection and Characterization of 3D Bifurcations on Micro-scan and MRA-TOF Cerebral Vasculatures for Intra-Cranial Aneurysms Prediction.</font> <br/>
-        Medical Image Analysis, Elsevier. <b>Under review <b>2019</b></b></br></br>
+        <li id="cl"><b>A. Nouri</b>, C. Charrier, O. Lézoray <br/>
+        <font color=#3364FF > SMQI: Saliency-based Mesh Quaity Assessment Index</font> <br/>
+        Journal of Visual Communication and Image Representation. <b>Under review <b>2019</b></b></br></br>
  
 
         <!--  -->
