--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
       <div id="contact">
           <h2>Contact</h2>
 
-          <font size="2"><i class="fas fa-envelope"></i></font> <font size="3">: anass.nouri@isen-ouest.fr </font> </br> </br>   
-          <font size="2"><i class=" fas fa-phone"> </i></font><font size="3">:+33769491508 </font> </br> </br>
-          <font size="3"><i class="fas fa-map-marker-alt"></i></font><font size="3">: 20 rue Cuirassé, Brest, 29200, France</font> </br> </br> 
+          <font size="2"><i class="fas fa-envelope"></i></font> <font size="3">: anass-nouri@hotmail.com </font> </br> </br>   
+          <font size="2"><i class=" fas fa-phone"> </i></font><font size="3">:+212610917667</font> </br> </br>
+          <font size="3"><i class="fas fa-map-marker-alt"></i></font><font size="3">: Ibn Tofail University, Kénitra, Morocco</font> </br> </br> 
        
       </div>
     </div>
