--- a/publications.html
+++ b/publications.html
@@ -194,7 +194,7 @@
         </font>
 
         <!-- Nat Conferences -->
-        <h2>Refereed National Conferences</h2>
+        <h2>Refereed French National Conferences</h2>
         <font size="3">
         <ol>
 
