--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@
       </div>
       <div id="menubar">
         <ul id="menu">
-          <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
+          <!-- put class="selected" in the li tag for the selected page - to highlight which page you're onn -->
           <li><a href="index.html">About</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
