--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div id="site_content2">
-      <!-- <div id="content"> -->
+      <!-- <div id="content"> - -->
         <h2>Ph.D and Master Thesis</h2>
         <font size="3">
           <ol>
