--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
           <font size="3"><h1><a href="index.html">Anass <span class="logo_colour">Nouri</span></a></h1></font>
-          <font size="2"> <h2>Associate Professor of Computer Science/I.A, Ibn Tofail University, Kénitra/Morocco</h2></font>
+          <font size="2"> <h2>Associate Professor of Computer Science/Vision/I.A, Ibn Tofail University, Kénitra/Morocco</h2></font>
         </div>
                                                 <div class="img_anass">
             
@@ -69,6 +69,7 @@
           <li><a href="publications.html">Publications</a></li>
           <li><a href="courses.html">Courses</a></li>
           <li><a href="database.html">Database</a></li>
+          <li><a href="open_positions.html">Open Positions</a></li>
 
                 
  
