--- a/research.html
+++ b/research.html
@@ -38,6 +38,7 @@
           <li><a href="publications.html">Publications</a></li>
           <li><a href="courses.html">Courses</a></li>
           <li><a href="database.html">Database</a></li>
+          <li><a href="open_positions.html">Open Positions</a></li>
          
         </ul>
       </div>
