--- a/publications.html
+++ b/publications.html
@@ -77,6 +77,14 @@
          <h2>Patents</h2>
         <font size="3">
           <ol>
+           <li id="cl"><b>Florent Autrusseau, Anass Nouri,Romain Bourcier</b> <br/>
+          <font color=#3364FF > Methods for Segmenting Digital Images, Devices and Systems for the Same</font> <br/>
+          Patent Eur. 20305143.8, submitted on Feb. 14th <b><b>2020</b></b>.</br>
+ 
+          </li>
+          </ol>
+
+          <ol>
            <li id="cl"><b>Anass Nouri, Florent Autrusseau, Romain Bourcier</b> <br/>
           <font color=#3364FF > Method for Locating and Characterizing Bifurcations of a Cerebral Vascular Tree, Associated Methods and Devices</font> <br/>
           European Patent pending, Number EP18306612.5, submitted on December <b><b>2018</b></b>.</br>
