--- a/latest_news.html
+++ b/latest_news.html
@@ -1,8 +1,8 @@
 <h1>Latest News</h1>
 <h4>Deposit of an European Patent</h4>
-<h5>Decembre, 2018</h5>
-<p>Check out our European patent entilted "Method For Locating and Characterizing Bifurcations of A Cerebreal Vascular Tree, Associated Methods and Devices"  <br /><a href="#">Read more</a></p>
+<h5>February, 2020</h5>
+<p>Check out our last European patent entilted "Methods for Segmenting Digital Images, Devices and Systems for the Same"  <br /><a href="#">Read more</a></p>
 
 <h4>Last published paper !</h4>
 <h5>February, 2019</h5>
-<p>Check out our lasted paper entilted "3D bifurcations characterization for intra-cranial aneurysms prediction" published in SPIE Medical Imaging 2019, San Diego CA USA  <br /><a href="https://www.researchgate.net/publication/328342129_3D_bifurcations_characterization_for_intra-cranial_aneurysms_prediction">Read more</a></p> 
+<p>Check out our lasted paper entilted "3D Colored Mesh Structure-Preserving Filtering With Adaptive P-Laplacian On Directed Graphs" published in International Conference on Image Processing (ICIP IEEE)  <br /><a href="https://hal.archives-ouvertes.fr/hal-02297223/document">Read more</a></p> 
