--- a/publications.html
+++ b/publications.html
@@ -138,6 +138,8 @@
         <li id="cl"> <b>S. Bougleux</b>, O.Lézoray, A. Nouri</b> <br/>
         <font color=#3364FF > 3D Colored Mesh Structure-Preserving Filtering With Adaptive P-Laplacian On Directed Graphs</font> <br/>
         International Conference on Image Processing (ICIP IEEE) <b>2019, accepted, to appear</b>.</br>
+        <button class="button" onClick="javascript: window.open('https://hal.archives-ouvertes.fr/hal-02297223/')">Bibtex  <i class="fas fa-percent"> </i> </button>
+        <button class="button" onClick="javascript: window.open('https://hal.archives-ouvertes.fr/hal-02297223/document')">PDF  <i class="fas fa-file-pdf"> </i> </button>
         <br/> 
 
         <!--  -->
