--- a/open_positions.html
+++ b/open_positions.html
@@ -51,6 +51,8 @@
     </div>
     <div id="site_content2">
       <!-- <div id="content"> - -->
+       <h2>No open position is available</h2>
+    <!--
         <h2>Ph.D subjects</h2>
         <font size="3">
           <ol>
@@ -72,8 +74,7 @@ des images d’IRM</b> <br/>
           </li>
           </ol>
         </font>
-
-       
+       -->
       </div>
     <div id="footer">
       <p><a href="index.html">Home</a> | <a href="research.html">Research</a> | <a href="publications.html">Publications</a> | <a href="courses.html">Courses</a> </p>
