--- a/open_positions.html
+++ b/open_positions.html
@@ -51,7 +51,7 @@
     </div>
     <div id="site_content2">
       <!-- <div id="content"> - -->
-       <h2>No open position is available</h2>
+       <h2>No position available</h2>
     <!--
         <h2>Ph.D subjects</h2>
         <font size="3">
