--- a/publications.html
+++ b/publications.html
@@ -111,11 +111,18 @@
         <h2>Refereed International Journals</h2>
         <font size="3">
         <ol>
+          
+        <!--  -->
+        <li id="cl"><b>A. Nouri</b>, F. Autrusseau, R. Bourcier et al. <br/>
+        <font color=#3364FF >Characterization of 3D Bifurcations in Micro-scan and MRA-TOF Images of Cerebral Vasculature for Prediction of Intra-Cranial Aneurysms</font> <br/>
+        Elsevier Computerized Medical Imaging and Graphics (CMIG), Vol 80 <b><b>2020</b></b>. </br>
+         <button class="button" onClick="javascript: window.open('https://www.sciencedirect.com/science/article/abs/pii/S0895611120300549')">Abstract  <i class="fas fa-file-pdf"> </i> </button>
+       
 
        <!--  -->
         <li id="cl"><b>A. Nouri</b>, C. Charrier, O. Lézoray <br/>
-        <font color=#3364FF > SMQI: Saliency-based Mesh Quaity Assessment Index</font> <br/>
-        Journal of Visual Communication and Image Representation. <b>Under review <b>2019</b></b></br></br>
+        <font color=#3364FF >A Genetically-based Combination of Visual Saliency and Roughness for F.R. 3D Mesh Quality Assessment - A statistical study</font> <br/>
+        The Computer Journal. <b>Accepted, To appear <b>2020</b></b></br></br>
  
 
         <!--  -->
