--- a/open_positions.html
+++ b/open_positions.html
@@ -53,13 +53,13 @@
        <div id="content">
       <!-- <h2>No position available</h2> - -->
    
-        <h2>Ph.D subjects</h2>
+        <h2>Ph.D subjects 2021</h2>
         <font size="3">
           <ol>
-          <li id="cl"><b>Exploitation des maillages 3D par réseaux de convolution.</b><br/>
-          <font color=#3364FF>Université Ibn Tofail, Laboratoire Systèmes Electroniques, Traitement de l'Information, Mécanique et Energetique - Kénitra/Maroc & Université de Caen Normandie, laboratoire GREYC</font> <br>
+          <li id="cl"><b>Exploitation des images cérébro-vasculaires 3D par réseaux de convolutions</b><br/>
+          <font color=#3364FF>Université Ibn Tofail, Laboratoire Systèmes Electroniques, Traitement de l'Information, Mécanique et Energetique - Kénitra/Maroc & Université de Nantes, laboratoires RMES & LTEN</font> <br>
           
-            <button class="button" onClick="javascript: window.open('Sujet_thèse_UIT_CaenNormandie.pdf')">Description <i class="fas fa-file-pdf"> </i> </button>
+            <button class="button" onClick="javascript: window.open('sujet_these_UIT_NANTES.pdf')">Description <i class="fas fa-file-pdf"> </i> </button>
 
          
 
