--- a/publications.html
+++ b/publications.html
@@ -143,6 +143,16 @@
         <h2>Refereed International Conferences</h2>
         <font size="3">
         <ol>
+     
+               <!--  -->
+        <li id="cl"> <b>S. Chater</b>, N. Lauzeral, A. Nouri, Y. El Merabet, F. Autrusseau</b> <br/>
+        <font color=#3364FF > Learning from mouse CT-Scan brain images to detect MRA-TOF human vasculatures</font> <br/>
+        43rd International Conf. of the IEEE Engineering in Medicine and Biology Society, IEEE EMBC <b>2021, accepted, to appear</b>.</br>
+        <button class="button" onClick="javascript: window.open('https://hal.archives-ouvertes.fr/hal-02297223/')">Bibtex  <i class="fas fa-percent"> </i> </button>
+        <button class="button" onClick="javascript: window.open('https://hal.archives-ouvertes.fr/hal-02297223/document')">PDF  <i class="fas fa-file-pdf"> </i> </button>
+        <br/> 
+
+          
         <!--  -->
         <li id="cl"> <b>S. Bougleux</b>, O.Lézoray, A. Nouri</b> <br/>
         <font color=#3364FF > 3D Colored Mesh Structure-Preserving Filtering With Adaptive P-Laplacian On Directed Graphs</font> <br/>
