--- a/students.html
+++ b/students.html
@@ -59,9 +59,9 @@
           <ol>
           <li id="cl"><b>Ibtissam Essadik</b><br/>
 							<table>			
-							<tr><td><span>Started January 2020 - Expected January in 2023</span></td></tr>
-							<tr><td><span>Subject: <span class='colortext'>3D Brain Atlas Creation using Machine Learning</span></span></td></tr>
-		                    <tr><td><span class="auteurs">Co-Supervisors (collaboration between Ibn Tofial University and University of Nantes/France): A. Nouri, F. Autrusseau, R. Taouahni</span></td></tr>
+							<tr><td>Started January 2020 - Expected January in 2023</td></tr>
+							<tr><td><span>Subject:  3D Brain Atlas Creation using Machine Learning </td></tr>
+		                    <tr><td>< Co-Supervisors (collaboration between Ibn Tofial University and University of Nantes/France): A. Nouri, F. Autrusseau, R. Taouahni </td></tr>
 							</table>		
 
 
