--- a/students.html
+++ b/students.html
@@ -61,7 +61,7 @@
 							<table>			
 							<tr><td>Started January 2020 - Expected January in 2023</td></tr>
 							<tr><td><span>Subject:  3D Brain Atlas Creation using Machine Learning </td></tr>
-		                    <tr><td>< Co-Supervisors (collaboration between Ibn Tofial University and University of Nantes/France): A. Nouri, F. Autrusseau, R. Taouahni </td></tr>
+		                    <tr><td>Co-Supervisors (collaboration between Ibn Tofial University and University of Nantes/France): A. Nouri, F. Autrusseau, R. Taouahni </td></tr>
 							</table>		
 
 
