--- a/students.html
+++ b/students.html
@@ -55,22 +55,40 @@
       <!-- <h2>No position available</h2> - -->
    
         <h2>Current Ph.D students</h2>
-        <font size="3">
-          <ol>
-          <li id="cl"><b>Ibtissam Essadik</b><br/>
-							<table>			
-							<tr><td>Started January 2020 - Expected January in 2023</td></tr>
-							<tr><td><span>Subject:  3D Brain Atlas Creation using Machine Learning </td></tr>
-		                    <tr><td>Co-Supervisors (collaboration between Ibn Tofial University and University of Nantes/France): A. Nouri, F. Autrusseau, R. Taouahni </td></tr>
+						<div class="student">								
+							<table>
+							<tr><td class="number">[4] <span class="auteurs">Z. Ibork</span></td></tr>				
+							<tr><td><span>Started January 2022 - Expected End in 2024</span></td></tr>
+							<tr><td><span>Subject: <span class='colortext'>Exploitation of 3D meshes by convolution networks.</span></span></td></tr>
+		                    <tr><td><span class="auteurs">Co-Supervisors: C. Charrier, O. Lézoray, A. Nouri, R. Taouahni</span></td></tr>
 							</table>		
-
-
-          <br/> <br/>
- 
- 
-          </li>
-          </ol>
-        </font>
+		                    </div>	
+							<div class="student">								
+							<table>
+							<tr><td class="number">[3] <span class="auteurs">R. Dufour</span></td></tr>				
+							<tr><td><span>Started January 2019 - Expected End in 2021</span></td></tr>
+							<tr><td><span>Subject: <span class='colortext'>Detection of people and tracking of their trajectories in a railway context by automatic learning. Application to video protection in trains.</span></span></td></tr>
+		                    <tr><td><span class="auteurs">Co-Supervisors: M. Berbineau, C. Meurie, O. Lézoray</span></td></tr>
+							</table>		
+		                    </div>	
+							<div class="student">								
+							<table>
+							<tr><td class="number">[2] <span class="auteurs">H. Kadi</span></td></tr>				
+							<tr><td><span>Started January 2019 - Expected End in 2021</span></td></tr>
+							<tr><td><span>Subject: <span class='colortext'>Exploring Personalized Medicine Data Using Data Mining Techniques.</span></span></td></tr>
+		                    <tr><td><span class="auteurs">Co-Supervisors: B. Meftah, O. Lézoray</span></td></tr>
+							</table>		
+		                    </div>	
+							<div class="student">								
+							<table>
+							<tr><td class="number">[1] <span class="auteurs">J. Haddad</span></td></tr>				
+							<tr><td><span>Started October 2018 - Expected End in 2021</span></td></tr>
+							<tr><td><span>Subject: <span class='colortext'>Analysis of interactions in face-to-face commercial interview videos.</span></span></td></tr>
+		                    <tr><td><span class="auteurs">Co-Supervisors: O. Lézoray, P. Hamel</span></td></tr>
+							</table>		
+		                    </div>							
+		                    <!-- 	-->																
+						</div>
       
       </div>
     <div id="footer">
