--- a/open_positions.html
+++ b/open_positions.html
@@ -45,6 +45,7 @@
           <li><a href="courses.html">Courses</a></li>
           <li><a href="database.html">Database</a></li>
           <li><a href="open_positions.html">Open Positions</a></li>
+          <li><a href="open_positions.html">Open Positions</a></li>
          
         </ul>
       </div>
