--- a/research.html
+++ b/research.html
@@ -39,6 +39,7 @@
           <li><a href="courses.html">Courses</a></li>
           <li><a href="database.html">Database</a></li>
           <li><a href="open_positions.html">Open Positions</a></li>
+          <li><a href="open_positions.html">Open Positions</a></li>
          
         </ul>
       </div>
