--- a/publications.html
+++ b/publications.html
@@ -45,6 +45,7 @@
           <li><a href="courses.html">Courses</a></li>
           <li><a href="database.html">Database</a></li>
           <li><a href="open_posiions.html">Open Positions</a></li>
+          <li><a href="students.html">Students</a></li>
          
         </ul>
       </div>
