--- a/students.html
+++ b/students.html
@@ -44,7 +44,7 @@
           <li><a href="publications.html">Publications</a></li>
           <li><a href="courses.html">Courses</a></li>
           <li><a href="database.html">Database</a></li>
-          <li><a href="open_posiions.html">Open Positions</a></li>
+          <li><a href="open_positions.html">Open Positions</a></li>
          
         </ul>
       </div>
