--- a/research.html
+++ b/research.html
@@ -67,6 +67,8 @@
       <h2>Projects I was envolved in</h2>
       <font size="3">
         <ul>
+          
+          <li>«Exploitation of 3D meshes using Convolutional Neural Networkss». <b>01/2022-01/2025</b>. (Toubkal Project, ToubkaV22/142 - Campus France :47259YH)</li>
           <li>«Monitoring the Evolution Dynamic of Intra-Cranial Aneurysms via Image Processing and Machine Learning tools». <b>2019-</b>. (Project with NExT, Health and Engineering - Nantes France)</li>
           <li>«Understanding the Pathophysiology of Intracranial Aneurysm» <b>2017-2018</b> (ANR Project).</li>
           <li>GRAPHSIP, «Graph Signal Processing, applications to 3D points Clouds and neuroscience». <b>2014-2017</b> (ANR Project). </li>
