--- a/research.html
+++ b/research.html
@@ -67,8 +67,8 @@
          <h2>Conferences/Workshops I co-organized</h2>
       <font size="3">
         <ul>
-          <li>«Intelligence Artificielle : Fondements et Applications». <b>Workshop 24 Juin 2021 à l'ENSC - Université Ibn Tofail</b>. <a href="workshop_2021.pdf">Details </a></li>
-          <li>«Intelligence Artificielle & Applications (I2A 2021)». <b>Conférence nationale marocaine- 26&27 Mai 2021</b>. <a href="i2a_2021_kenitra.pdf">Details </a> </li>
+          <li>«Intelligence Artificielle : Fondements et Applications». <b>Workshop 24 Juin 2021 à l'ENSC - Université Ibn Tofail</b>. <a href="workshop_ai_2021.pdf">Details </a></li>
+          <li>«Intelligence Artificielle & Applications (I2A 2021)». <b>Conférence nationale marocaine- 26&27 Mai 2021 à Mehdia</b>. <a href="i2a_2021_kenitra.pdf">Details </a> </li>
      </ul> 
       </font>
         
