--- a/publications.html
+++ b/publications.html
@@ -116,8 +116,8 @@
                    <!--  -->
         <li id="cl"><b>I. Essadik</b>, A. Nouri, R. Touahni, R. Bourcier, F. Autrusseau <br/>
         <font color=#3364FF >Automatic classification of the cerebral vascular bifurcations using dimensionality reduction and machine learning</font> <br/>
-        Journal of NeuroInformatics <b><b>2022</b></b>. UNDER REVISION </br>
-         <button class="button" onClick="javascript: window.open('https://jnis.bmj.com/content/early/2022/05/19/neurintsurg-2021-018487')">Abstract  <i class="fas fa-file-pdf"> </i> </button>
+        in Elsevier Neuroscience Informatics, Sept. 2022 <b><b>2022</b></b> </br>
+         <button class="button" onClick="javascript: window.open('https://www.sciencedirect.com/science/article/pii/S277252862200070X')">PDF  <i class="fas fa-file-pdf"> </i> </button>
        
 
                
