--- a/publications.html
+++ b/publications.html
@@ -180,7 +180,7 @@ Intra-Cranial Aneurysm Detection and Segmentation</font> <br/>
         <font color=#3364FF > Learning from mouse CT-Scan brain images to detect MRA-TOF human vasculatures</font> <br/>
         43rd International Conf. of the IEEE Engineering in Medicine and Biology Society, IEEE EMBC <b>2021, accepted, to appear</b>.</br>
         <button class="button" onClick="javascript: window.open('https://hal.archives-ouvertes.fr/hal-02297223/')">Bibtex  <i class="fas fa-percent"> </i> </button>
-        <button class="button" onClick="javascript: window.open('https://hal.archives-ouvertes.fr/hal-02297223/document')">PDF  <i class="fas fa-file-pdf"> </i> </button>
+        <button class="button" onClick="javascript: window.open('https://www.researchgate.net/publication/356937009_Learning_From_Mouse_CT-Scan_Brain_Images_To_Detect_MRA-TOF_Human_Vasculatures')">PDF  <i class="fas fa-file-pdf"> </i> </button>
         <br/> 
 
           
