--- a/publications.html
+++ b/publications.html
@@ -166,6 +166,8 @@
         <font color=#3364FF > Toward a 3D Arterial Tree Bifurcation Model for
 Intra-Cranial Aneurysm Detection and Segmentation</font> <br/>
         in Intl. Conf. on Pattern Recog, ICPR'22, Montreal <b>2022, accepted, to appear</b>.</br>
+       <button class="button" onClick="javascript: window.open('https://anassnouri.github.io/sujet_these_UIT_NANTES.pdf')">PDF  <i class="fas fa-file-pdf"> </i> </button>
+
        <br/> 
           
                
