--- a/research.html
+++ b/research.html
@@ -75,8 +75,8 @@
       <h2>Projects I was/am envolved in</h2>
       <font size="3">
         <ul>
-          
-          <li>«Exploitation of 3D meshes using Convolutional Neural Networkss». <b>01/2022-01/2025</b>. (Toubkal Project, ToubkaV22/142 - Campus France :47259YH)</li>
+          <li>«Modèle de Bifurcations pour la détection et la caractérisation des anévrismes intracrâniens». <b>01/2023-12/2025</b>. (Toubkal Project, Toubkal/23/162 - Campus France : 48591XG).)</li>          
+          <li>«Exploitation of 3D meshes using Convolutional Neural Networks». <b>01/2022-12/2024</b>. (Toubkal Project, ToubkaV22/142 - Campus France :47259YH)</li>
           <li>«Monitoring the Evolution Dynamic of Intra-Cranial Aneurysms via Image Processing and Machine Learning tools». <b>2019-</b>. (Project with NExT, Health and Engineering - Nantes France)</li>
           <li>«Understanding the Pathophysiology of Intracranial Aneurysm» <b>2017-2018</b> (ANR Project).</li>
           <li>GRAPHSIP, «Graph Signal Processing, applications to 3D points Clouds and neuroscience». <b>2014-2017</b> (ANR Project). </li>
