--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
     </div>
     <div id="site_content2">
       <!-- <div id="content"> - -->
-        <h2>Ph.D and Master Thesis</h2>
+        <h2>Habilitation, Ph.D and Master Thesis</h2>
         <font size="3">
           <ol>
 
