--- a/publications.html
+++ b/publications.html
@@ -168,7 +168,17 @@
         <h2>Refereed International Conferences</h2>
         <font size="3">
         <ol>
-          
+
+                                    <!--  -->
+        <li id="cl">  <b>Z. Ibork</b>  , <b>A. Nouri</b> ,<b>O. Lézoray</b>,  <b>C. Charrier</b> <br/>
+        <font color=#3364FF > No Reference 3D mesh quality assessment using deep convolutional features</font> <br/>
+        in 13th IEEE Int'l Symposium on Image and Signal Processing and Analysis (ISPA) <b>2023, accepted, to appear</b>.</br>
+
+                                              <!--  -->
+        <li id="cl">  <b>I. Essadik</b>  , <b>A. Nouri</b> ,<b>R. Touahni</b>,  <b>F. Autrusseau</b> <br/>
+        <font color=#3364FF > Comparing Autoencoder to Geometrical Features for Vascular Bifurcations Identification</font> <br/>
+        in 13th IEEE Int'l Symposium on Image and Signal Processing and Analysis (ISPA) <b>2023, Vol. 35, n°17, pp. 103-1–103-6</b>.</br>
+  
           
                           <!--  -->
         <li id="cl"> <b>O. Lézoray</b>, A. Nouri</b> <br/>
