--- a/publications.html
+++ b/publications.html
@@ -88,7 +88,7 @@
           <ol>
            <li id="cl"><b>Florent Autrusseau, Anass Nouri,Romain Bourcier</b> <br/>
           <font color=#3364FF > Methods for Segmenting Digital Images, Devices and Systems for the Same</font> <br/>
-          Patent Eur. 20305143.8, submitted on Feb. 14th <b><b>2020;</b></b>, published on European Patent Office in <b>2022</b> and in US patent Office in <b>2023</b>.</br>
+          Patent Eur. 20305143.8, submitted on Feb. 14th <b><b>2020;</b></b>, published on European Patent Office in <b>21/12/2022</b> and in US patent Office in <b>16/03/2023</b>.</br>
  
           </li>
          
