--- a/publications.html
+++ b/publications.html
@@ -199,9 +199,9 @@ Intra-Cranial Aneurysm Detection and Segmentation</font> <br/>
                
                <!--  -->
         <li id="cl"> <b>I. Essadik</b>, A. Nouri, N. Lauzeral, R. Touahni, R. Bourcier, F. Autrusseau</b> <br/>
-        <font color=#3364FF > Automatic bifurcation labeling in 3D vascular images using artery features and machine learning techniques</font> <br/>
+        <font color=#3364FF > Combining machine learning and artery characterization to identify the main bifurcations in 3D vascular trees</font> <br/>
         in SPIE Medical Imaging, San Diego, USA,  <b>2022</b>.</br>
-       <button class="button" onClick="javascript: window.open('https://www.researchgate.net/publication/358571431_Automatic_Bifurcation_Labeling_in_3D_Vascular_Images_Using_Artery_Features_and_Machine_Learning_Techniques')">PDF  <i class="fas fa-file-pdf"> </i> </button>
+       <button class="button" onClick="javascript: window.open('https://www.spiedigitallibrary.org/conference-proceedings-of-spie/12036/2605459/Combining-machine-learning-and-artery-characterization-to-identify-the-main/10.1117/12.2605459.full?SSO=1')">PDF  <i class="fas fa-file-pdf"> </i> </button>
  
        <br/> 
           
