--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
       <div id="contact">
           <h2>Contact</h2>
 
-          <font size="2"><i class="fas fa-envelope"></i></font> <font size="3">: anass.nouri@uit.ac.ma </font> </br> </br>   
+          <font size="2"><i class="fas fa-envelope"></i></font> <font size="3">: anass.nouri@glancy3D.com </font> </br> </br>   
 
-          <font size="3"><i class="fas fa-map-marker-alt"></i></font><font size="3">: Ibn Tofail University, Kénitra, Morocco</font> </br> </br> 
+          <font size="3"><i class="fas fa-map-marker-alt"></i></font><font size="3">: Kénitra, Morocco</font> </br> </br> 
        
       </div>
     </div>
