--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="courses.html">Courses</a></li>
-          <li><a href="database.html">Database</a></li>
-          <li><a href="open_positions.html">Open Positions</a></li>
-          <li><a href="students.html">Students</a></li>
+          <!--<li><a href="database.html">Database</a></li>-->
+          <!--<li><a href="open_positions.html">Open Positions</a></li>-->
+         <!-- <li><a href="students.html">Students</a></li>-->
 
                 
  
