--- a/courses.html
+++ b/courses.html
@@ -34,12 +34,12 @@
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li><a href="index.html">About</a></li>
-          <li><a href="research.html">Research</a></li>
+       <!--   <li><a href="research.html">Research</a></li>-->
           <li><a href="publications.html">Publications</a></li>
           <li><a href="courses.html">Courses</a></li>
-          <li><a href="database.html">Database</a></li>
-          <li><a href="open_positions.html">Open Positions</a></li>
-          <li><a href="students.html">Students</a></li>
+        <!--  <li><a href="database.html">Database</a></li>-->
+        <!--  <li><a href="open_positions.html">Open Positions</a></li>-->
+        <!--  <li><a href="students.html">Students</a></li>-->
          
         </ul>
       </div>
