--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <ul>
 
-          <li> <font size="8"><a href="https://glancy3d.com" target="_blank"></i>Glancy3D - Home </a> </font></li>
+          <li> <font size="8"><a href="https://glancy3d.com" target="_blank"> Glancy3D - Home  ></li>
           
 
         </ul>
