--- a/courses.html
+++ b/courses.html
@@ -54,10 +54,8 @@
 
         <ul>
 
-          <li> <font size="8"><a href="https://www.researchgate.net/profile/Anass_Nouri" target="_blank"><i class="fab fa-researchgate"></i></a> </font></li>
-          <li><font size="8"><a href="https://fr.linkedin.com/in/anass-nouri-aa01a739"><i class="fab fa-linkedin"></i></a></font></li>
-          <li><font size="4"><a href="https://scholar.google.fr/citations?user=EX2K-DIAAAAJ&hl=fr"><i class="ai ai-google-scholar-square ai-3x"></i></a></font></li>
-          
+          <li><a href="https://www.glancy3d.com" target="_blank">Glancy3D - Home</a></li>
+     
 
         </ul>
  
