--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     
 
                  <!-- Currently, he is an Associate Professor of computer science at Ibn Tofail University of Morocco. He gave lectures in computer programming, image analysis and machine learning. His current research interests include 2D images, 3D mesh/volume processing, visual saliency, objective quality assessment, medical imaging and machine learning. -->
-             Currently, he is a researcher R&D at Glancy.
+             Currently, he is a CTO and researcher R&D at Glancy.
   <!--<button onclick=" window.open('CV.pdf', '_blank'); return false;">Download My CV <i class="fas fa-file-pdf"> </i> </button> --></p>
               </font>
             
