--- a/publications.html
+++ b/publications.html
@@ -303,7 +303,7 @@
         </font>
       </div>
     <div id="footer">
-      <p><a href="index.html">Home</a> | <a href="research.html">Research</a> | <a href="publications.html">Publications</a> | <a href="courses.html">Courses</a> </p>
+      <p><a href="index.html">Home</a> | <a href="publications.html">Publications</a> | <a href="courses.html">Courses</a> </p>
       <p>Copyright &copy; A. Nouri 2023 | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a></p>
     </div>
   </div>
