--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
           <font size="3"><h1><a href="index.html">Anass <span class="logo_colour">Nouri</span></a></h1></font>
-          <font size="2"> <h2>Associate Professor of Computer Science/Vision/I.A, Ibn Tofail University, Kénitra/Morocco</h2></font>
+          <font size="2"> <h2>Researcher at Glancy</h2></font>
         </div>
       </div>
       <div id="menubar">
@@ -208,10 +208,7 @@
         <font size="3">
         <ol>
  
-       <br/>
-
-
-
+      
 
           <!-- -->
         <li id="cl"> <b>A. Nouri</b>, C. Charrier, O. Lézoray  <br/>
