--- a/courses.html
+++ b/courses.html
@@ -55,14 +55,27 @@
   
         <ul>
 
-          <li><a href="https://www.glancy3d.com" target="_blank">Glancy3D - Home</a></li>
-     
+   
 
         </ul>
         -->
  
       </div>
       <div id="content">
+
+      <h2>Lectures I'm giving in <a href="https://www.uit.ac.ma" target="_blank">Ibn Tofail University</a> </h2>
+      <font size="3">
+        <ul>
+          <li>Hardware and Software Architecture of Computers </li>
+          <li>Algorithmics and Python programming</li>
+           <li>Image processing and Analysis</li>
+          <li>Deep Learning</li>
+          <li>Masters and bachelor students' projects supervision</li>
+        </ul> 
+      </font>
+
+
+        
       <h2>Lectures I'm giving in the Computer science department of the <a href="https://www.isen-brest.fr" target="_blank">ISEN-Brest</a> school of engineering </h2>
       <font size="3">
         <ul>
