--- a/students.html
+++ b/students.html
@@ -69,6 +69,16 @@
           <font color=#3364FF > Exploitation of 3D Meshes using Convolutinal Neural Networks</font> <br/>
          Started 01/01/2020. Co-supervisors (Ibn Tofail University & Caen(France) University) : A. Nouri, Christophe Charrier, O. Lézoray, R. Touahni.</br>
            </li>
+ 
+            <br/> <br/>
+            
+           <li id="cl"><b>Said Ammari</b> <br/>
+          <font color=#3364FF > Exploitation of a synthetic model and deep learning for the automatic detection of intracranial aneurysms on 3D meshes</font> <br/>
+         Started 01/01/2020. Co-supervisors (Ibn Tofail University (Kénitra/Morocc) & Nantes University (France) & Mohammed 5 University (Rabat/Morocco)) : A. Nouri, Rochdi Messoussi, Florent Autrusseau, Mohammed El Hassouni.</br>
+           </li>
+ 
+
+            
           </ol>
         </font>
 
