--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
                                                 <div class="img_anass">
             
-            <img src="anass.png"
+            <img src="anass_profile_oval.png"
                   height="200px" 
                  width="200px">
           </div>
