--- a/publications.html
+++ b/publications.html
@@ -168,7 +168,13 @@
         <h2>Refereed International Conferences</h2>
         <font size="3">
         <ol>
-
+          
+        <li id="cl">  <b>A. Nouri</b> ,<b>O. Lézoray</b>,  <b>Z. Ibork</b> , <b>C. Charrier</b>, <b>R. Touahni</b>  <br/>
+        <font color=#3364FF > A Fully Automatic Colorimetric Saliency Detection Approach for 3D Meshes </font> <br/>
+        in International Conference on Signal, Image, Video and Communications (ISIVC - IEEE) <b>2024, accepted, to appear</b>.</br>
+     <button class="button" onClick="javascript: window.open('ISPA_2023.pdf')">PDF  <i class="fas fa-file-pdf"> </i> </button>
+        
+  
                                     <!--  -->
         <li id="cl">  <b>Z. Ibork</b>  , <b>A. Nouri</b> ,<b>O. Lézoray</b>,  <b>C. Charrier</b> <br/>
         <font color=#3364FF > No Reference 3D mesh quality assessment using deep convolutional features</font> <br/>
