--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
           <font size="3"><h1><a href="index.html">Anass <span class="logo_colour">Nouri</span></a></h1></font>
-          <font size="2"> <h2>Associate Professor of Computer Science/I.A, Ibn Tofail University, Kénitra/Morocco</h2></font>
+          <font size="2"> <h2>Associate Professor of Computer Science/Vision/I.A, Ibn Tofail University, Kénitra/Morocco</h2></font>
         </div>
       </div>
       <div id="menubar">
@@ -67,6 +67,7 @@
          <h2>Conferences/Workshops I co-organized</h2>
       <font size="3">
         <ul>
+          <li>«Artificial Intelligence : Advanced Topics and Social Issues. <b>Workshop 19-23 Novembre 2022 à Marrakech </b>. <a href="https://easychair.org/cfp/aiatsi2022">Details </a></li>
           <li>«Intelligence Artificielle : Fondements et Applications». <b>Workshop 24 Juin 2021 à l'ENSC - Université Ibn Tofail</b>. <a href="workshop_ai_2021.pdf">Details </a></li>
           <li>«Intelligence Artificielle & Applications (I2A 2021)». <b>Conférence nationale marocaine- 26&27 Mai 2021 à Mehdia</b>. <a href="i2a_2021_kenitra.pdf">Details </a> </li>
      </ul> 
@@ -75,7 +76,7 @@
       <h2>Projects I was/am envolved in</h2>
       <font size="3">
         <ul>
-          <li>«Modèle de Bifurcations pour la détection et la caractérisation des anévrismes intracrâniens». <b>01/2023-12/2025</b>. (Toubkal Project, Toubkal/23/162 - Campus France : 48591XG).)</li>          
+          <li>«Modèle de Bifurcations pour la détection et la caractérisation des anévrismes intracrâniens». <b>01/2023-12/2025 | Co-porteur</b>. (Toubkal Project, Toubkal/23/162 - Campus France : 48591XG).)</li>          
           <li>«Exploitation of 3D meshes using Convolutional Neural Networks». <b>01/2022-12/2024</b>. (Toubkal Project, ToubkaV22/142 - Campus France :47259YH)</li>
           <li>«Monitoring the Evolution Dynamic of Intra-Cranial Aneurysms via Image Processing and Machine Learning tools». <b>2019-</b>. (Project with NExT, Health and Engineering - Nantes France)</li>
           <li>«Understanding the Pathophysiology of Intracranial Aneurysm» <b>2017-2018</b> (ANR Project).</li>
