--- a/research.html
+++ b/research.html
@@ -67,7 +67,8 @@
          <h2>Conferences/Workshops I co-organized</h2>
       <font size="3">
         <ul>
-          <li>«Artificial Intelligence : Advanced Topics and Social Issues. <b>Workshop 19-23 Novembre 2022 à Marrakech </b>. <a href="https://easychair.org/cfp/aiatsi2022">Details </a></li>
+          <li>«Higher Education,Research, and Innovation in the Era of Digital and AI <b>Int. Conference 15-18 Novembre 2023 at Dakhla </b>. <a href="https://esri-ia.com/">Details </a></li>
+          <li>«Artificial Intelligence : Advanced Topics and Social Issues. <b>Int. Conference 19-23 Novembre 2022 in Marrakech </b>. <a href="https://easychair.org/cfp/aiatsi2022">Details </a></li>
           <li>«Intelligence Artificielle : Fondements et Applications». <b>Workshop 24 Juin 2021 à l'ENSC - Université Ibn Tofail</b>. <a href="workshop_ai_2021.pdf">Details </a></li>
           <li>«Intelligence Artificielle & Applications (I2A 2021)». <b>Conférence nationale marocaine- 26&27 Mai 2021 à Mehdia</b>. <a href="i2a_2021_kenitra.pdf">Details </a> </li>
      </ul> 
@@ -76,12 +77,12 @@
       <h2>Projects I was/am envolved in</h2>
       <font size="3">
         <ul>
-          <li>«Modèle de Bifurcations pour la détection et la caractérisation des anévrismes intracrâniens». <b>01/2023-12/2025 | Co-porteur</b>. (Toubkal Project, Toubkal/23/162 - Campus France : 48591XG).)</li>          
-          <li>«Exploitation of 3D meshes using Convolutional Neural Networks». <b>01/2022-12/2024</b>. (Toubkal Project, ToubkaV22/142 - Campus France :47259YH)</li>
-          <li>«Monitoring the Evolution Dynamic of Intra-Cranial Aneurysms via Image Processing and Machine Learning tools». <b>2019-</b>. (Project with NExT, Health and Engineering - Nantes France)</li>
-          <li>«Understanding the Pathophysiology of Intracranial Aneurysm» <b>2017-2018</b> (ANR Project).</li>
-          <li>GRAPHSIP, «Graph Signal Processing, applications to 3D points Clouds and neuroscience». <b>2014-2017</b> (ANR Project). </li>
-          <li>PEQP 2D, «Perceptual quality assement of 2D images» <b>2013-2014</b> (National Project GDR-ISIS/International Commission on Illumination).</li>
+          <li>«Modèle de Bifurcations pour la détection et la caractérisation des anévrismes intracrâniens». <b>01/2023-12/2025 | Co-Leader</b>. (Toubkal Project, Toubkal/23/162 - Campus France : 48591XG).)</li>          
+          <li>«Exploitation of 3D meshes using Convolutional Neural Networks». <b>01/2022-12/2024|Co-Leader </b>. (Toubkal Project, ToubkaV22/142 - Campus France :47259YH)</li>
+          <li>«Monitoring the Evolution Dynamic of Intra-Cranial Aneurysms via Image Processing and Machine Learning tools». <b>2019-2021 | Member</b>. (Project with NExT, Health and Engineering - Nantes France)</li>
+          <li>«Understanding the Pathophysiology of Intracranial Aneurysm» <b>2017-2018 | Member </b> (ANR Project).</li>
+          <li>GRAPHSIP, «Graph Signal Processing, applications to 3D points Clouds and neuroscience». <b>2014-2017 | Member</b> (ANR Project). </li>
+          <li>PEQP 2D, «Perceptual quality assement of 2D images» <b>2013-2014 | Member </b> (National Project GDR-ISIS/International Commission on Illumination).</li>
         </ul> 
       </font>
 
