--- a/publications.html
+++ b/publications.html
@@ -376,6 +376,16 @@ Intra-Cranial Aneurysm Detection and Segmentation</font> <br/>
         <ol>
         <!--  -->
         <li id="cl"> <b>A. Nouri</b> <br/>
+        <font color=#3364FF > La révolution de l'Intelligence Artificielle dans le domaine du Médical - Doit-on avoir peur ?</font> <br/>
+        Seminar in "Ramadan des Sciences" à la faculté des Sciences <b>2024</b>Kénitra, Maroc</br>
+
+    
+        <li id="cl"> <b>A. Nouri</b> <br/>
+        <font color=#3364FF > 3D bifurcations characterization for intra-cranial aneurysms prediction</font> <br/>
+        Seminar in "Intelligence Artificielle : Fondements et Applications" à l'Ecole Nationale Supérieure de chimie<b>2021</b>, Kénitra, Maroc.</br>
+
+          
+        <li id="cl"> <b>A. Nouri</b> <br/>
         <font color=#3364FF > 3D bifurcations characterization for intra-cranial aneurysms prediction</font> <br/>
         Seminar of the Institut du Thorax, <b>2018</b>, Noirmoutier-en-Ile, France.</br>
 
