--- a/open_positions.html
+++ b/open_positions.html
@@ -52,8 +52,8 @@
     </div>
     <div id="site_content2">
        <div id="content">
-    <h2>No position available</h2>  
-   <=--
+    <h2>No position available. Stay tuned!</h2>  
+   <--
         <h2>Ph.D subjects 2021</h2>
         <font size="3">
           <ol>
