--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <li><a href="publications.html">Publications</a></li>
           <li><a href="courses.html">Courses</a></li>
           <li><a href="database.html">Database</a></li>
-          <li><a href="open_positions.html">Open Positions</a></li>
+          <li><a href="open_positions.html">Open Positions/Call of Papers</a></li>
          <li><a href="students.html">Students</a></li>
 
                 
