--- a/students.html
+++ b/students.html
@@ -78,7 +78,7 @@
           <ol>
           <li id="cl"><b>Ibtissam Essadik</b><br/>
           <font color=#3364FF>3D Brain Atlas Creation Using Machine Learning</font> <br>
-          Started 01/01/2020. Co-supervisors (Ibn Tofail University & Nantes(France) University) : A. Nouri, F. Autrusseau, R. Touahni. <br>
+         01/01/2020 to 15/12/2023. Co-supervisors (Ibn Tofail University & Nantes(France) University) : A. Nouri, F. Autrusseau, R. Touahni. <br>
           
           </li>
       
